fix bug on section 4 title its width of 20ch was causing vw less than 400 to overflow.

--- a/src/style.css
+++ b/src/style.css
@@ -65,38 +65,37 @@
   
 
 
-@media (max-width: 761px) {
+@media (max-width: 767px) {
     * {
         padding: 0;
         margin: 0;
         box-sizing: border-box;
     }
 :root {
-    max-width: 761px;
+    max-width: 767px;
 display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
 
-
 }
-
 body {
-    max-width: 761px;
+    max-width: 767px;
     background-color: var(--white-font-color);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 text-align: center;    
+border: 3px solid black;
 
 }    
 #content {
-    max-width: 761px;
     
+
     }
 header {
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -234,7 +233,7 @@ text-align: center;
 
 #SECTION-1-PARENT-CONTAINER {
     /* border: 4px solid black; */
-    width: 100%;
+    /* width: 100%; */
 row-gap: 200PX;
 word-wrap: break-word;
 display: flex;
@@ -364,7 +363,7 @@ line-height: 1.2;
 
 #section-4-title {
     font-size: 26px;
-    width: 20ch;
+    /* width: 20ch; */
     margin-bottom: 25px;
 }
 #section-4-text-container {
@@ -518,7 +517,7 @@ margin-bottom: 25px;
 
 
 
-@media (min-width: 762px) {
+@media (min-width: 768px) {
 
 :root {
     
